style.css
/* ... */
.submenu{
  position: absolute;
  display:grid;
  grid-template-columns: repeat(2, minmax(300px, 1fr));
  grid-auto-rows: max-content; /* rows expand to content ONLY and not the height set here */
  align-items:start;
  justify-items:start;

  overflow: visible;

  row-gap: 40px;

  padding-top:100px;
  border-left: 500px solid transparent;
  border-right: 500px solid transparent;
  padding-bottom:220px;
  top:0;
  left: 50%;
  transform: translateX(-50%);
  width:max-content; /*size based on content , can also use "auto" , since 100% will be the ancestors relative*/

  pointer-events:none;

  text-align: left;
  z-index: 3;
  opacity: 0;
  visibility:hidden;
  transition: opacity 0.5s ease-in-out;
  background-color: rgba(0, 0, 0, 0);
}
.submenu__section{
  min-width:540px; /*This seems to be enough to push the grid cells from left to right and top to bottom*/
  position: relative; /*This is to remove the image from the grid flow for more flexibility*/
  outline: 1px solid rgb(255, 0, 0);
}
.submenu__section img{
  position: absolute;
  top: 100%;  /* adjust as needed */
  left: 0;
  max-height: 360px;
  width: auto;
}
.submenu__section h2 {
  color: rgb(143, 143, 143);
  font-size: 25px; /*was 18px*/
  font-family: 'EB Garamond', serif;
  margin-bottom: 5px;
}
.submenu__section ul {
  list-style:none; 
  margin-bottom: 8px;
}
.submenu__section ul li a {
  color: rgb(26, 26, 26);
  text-decoration: none;
  font-family: 'EB Garamond', serif;
  font-size: 20px;
}
.navbar__option:hover + .submenu,
.submenu:hover {
  opacity: 1;
  pointer-events: auto;
  visibility: visible;
}

/**/
main .empty-filler{
  height:74.9vh;
}
/**/

.title-banner {
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: #fff;
  width: 100vw;
  height: 9vh;
}
.title-banner h1 {
  font-size: 35.1px;
  font-family: 'EB Garamond', serif;
  color: #242424;
}

/*COLLAGE ///////////////////////////////////////////////////*/
.collage {
  position: relative;
  width: 100vw;
}

.collage__grid * {
  outline: 1px solid rgba(255, 0, 0, 0);
}

.collage__grid{ /*grid list*/
  display:grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: repeat(5, 25vh);
  list-style:none;
  background-color: rgba(215, 230, 226, 0.89); /* for testing */
  padding-top: 69.1px;
  width: 100vw;
  position: relative;
}

.collage__grid-item{
  position:relative;
}

.collage__grid-item.bracelets, .collage__grid-item.watches,
.collage__grid-item.rings,.collage__grid-item.earrings,.collage__grid-item.necklaces {
  grid-column: 1;
}

.collage__grid-item--model-half-full{
  position:relative;
  grid-column: 2;
  grid-row:1/6;
}

.collage__grid-item--model-half-full .megadropdown-hor__animation{
  position:absolute;
  align-items:center;
  top:0;
  left:-100%;
  width:50vw;
  height:100%;
  transform:scalex(0);
  transition:transform 0.5s ease-in-out;
  transform-origin:right;
  background-color:white;
  pointer-events:none;
}

.collage__grid-item--model-half-full .megadropdown-hor__content{
  position:absolute;
  align-items:center;
  top:0;
  left:-100%;
  width:50vw;
  height:100%;
  pointer-events:none;
  opacity:0;
  transition: opacity 0.5s ease-in-out;
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 7.6vh;
}

.collage__grid-item--model-half-full .megadropdown-hor__mono-scroll {
  display:flex;
  flex-direction:row;
}

.collage__grid-item--model-half-full .megadropdown-hor__mono-scroll-list-item img{
  width:14.2vw;
  object-fit: cover;
  height: 25.6vh;
}


.collage__grid-item--model-half-full .megadropdown-hor__mono-scroll-list {
  /*! position: absolute; */
  list-style:none;
  /*! top: 50%; */
  /*! left: 50%; */
  /*! transform: translateX(-50%) translateY(-50%); */
  /*! text-align: center; */
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  /*! justify-content: end; */
  /*! margin-left: 50%; */
  /*! transform: translateX(calc(50%/1.5)); */
  overflow-x: auto;
  /*! scrollbar-width: none; */
  width: 14vw;
  scroll-behavior: smooth;
}

.collage__grid-item--model-half-full .megadropdown-hor__content-text {
  text-align: center;
  width: 15.4vw;
  /*! gap: 10; */
}

.collage__grid-item--model-half-full .megadropdown-hor__content-text h1 {
  margin-bottom: 1.6vh;
}
.collage__grid-item--model-half-full .megadropdown-hor__content-text p {
  /*! margin-top: 15vh; */
  line-height: 2.3vh;
}

.collage__grid-item--model-half-full:hover .megadropdown-hor__animation,
.collage__grid-item--model-half-full:hover .megadropdown-hor__content{
  width:50vw;
  transform:scaleX(1);
  opacity:1;
  pointer-events:auto;
}

.collage__grid-item > img{
  width:100%;
  height:100%;
  object-fit:cover;
  transition: transform 2s ease;
  transform: scale(1);
}

.collage__grid-item.rings img {
  object-position: 60% 45%;
  width: 100%;
  object-fit: cover;
  transition: transform 5s ease; /* slow animation */
}
.collage__grid-item.bracelets img {
  object-position: 10% 53%;
  width: 100%;
}
.collage__grid-item.watches img {
  object-position: 10% 18%;
  width: 100.0%;
}
.collage__grid-item.necklaces img {
  object-position: 10% 70%;
  width: 100.0%;
}
.collage__grid-item--model-half-full img{
  object-position: 10% 30%;
  /*! width: 238px; */
  /*! object-fit: cover; */
}



.collage__grid-scroll-list {
  position:absolute;
  display:flex;
  top: 25%;
  left:50%;
  transform: translateX(-50%);
}

.collage__grid-scroll-item img{
  max-height:20vh;
  width:auto;
}
.collage__grid-scroll-item div {
  display:flex;
  width:max-content;
  height:max-content;
  justify-content:center;
  align-items:center;
}

.collage__grid-scroll-item div h1 {
  text-align:center;
  margin-bottom:3vh;
  color:black;
}
.collage__grid-scroll-item div p {
  text-align:center;
  color: black;
}





.collage__grid-item:hover img {
  transform: scale(1.02); /* zooms out to reveal more */
}
/* ... */

